# was

./: Main.hs  was.cabal
lib/: stdlib.scm
src/: Main.hs
