cabal-version:      3.0
name:               was
version:            0.0.0.1
synopsis:           Write you a Scheme
-- description:
homepage:           https://github.com/isaac025/was
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable was
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
                    , parsec
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
